--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Generative AI with Large Language Models - Coursera</title>
-  <link rel="icon" type="image/png" href="/tablogo.png">
+  <link rel="icon" type="image/png" href="/images/tablogo.png">
 
   <!-- Bootstrap 5 -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -74,7 +74,7 @@
   <div class="container-fluid">
     <!-- Logo -->
     <a class="navbar-brand" href="https://www.coursera.org/account/accomplishments/verify/Y5UY93SYQD5R?isNewUser=true">
-      <img src="logo.png" alt="Coursera Logo" height="28">
+      <img src="images/logo.png" alt="Coursera Logo" height="28">
     </a>
 
     <!-- Hamburger -->
@@ -193,7 +193,7 @@
       <div class="completion-box d-flex align-items-start">
   <!-- Profile Icon -->
   <div class="position-relative me-3">
-    <img src="avatar.png" alt="User Avatar" 
+    <img src="images/avatar.png" alt="User Avatar" 
          style="height:60px; width:60px; border-radius:50%; background:#f0f0f0; object-fit:cover;">
  
     </span>
@@ -219,7 +219,7 @@
   <div class="d-flex align-items-start">
     <!-- Logo -->
     <div class="me-3">
-      <img src="deep.jpeg" alt="DeepLearning.AI" 
+      <img src="/images/deep.jpeg" alt="DeepLearning.AI" 
            style="height:50px; width:50px; border-radius:50%; object-fit:cover;">
     </div>
 
@@ -283,7 +283,7 @@
     <!-- Right Column -->
     <div class="col-lg-6 text-center">
       <div class="certificate">
-        <img src="certi.png" alt="Certificate" class="img-fluid shadow">
+        <img src="/images/certi.png" alt="Certificate" class="img-fluid shadow">
       </div>
     </div>
   </div>
@@ -353,17 +353,17 @@
 
   <!-- App Store -->
   <a href="https://apps.apple.com/us/app/coursera-grow-your-career/id736535961" target="_blank">
-    <img src="apple.png" alt="App Store" class="mb-2 d-block mx-auto" style="height:40px;">
+    <img src="/images/apple.png" alt="App Store" class="mb-2 d-block mx-auto" style="height:40px;">
   </a>
 
   <!-- Google Play -->
   <a href="https://play.google.com/store/apps/details?id=org.coursera.android" target="_blank">
-    <img src="google.png" alt="Google Play" class="mb-3 d-block mx-auto" style="height:40px;">
+    <img src="/images/google.png" alt="Google Play" class="mb-3 d-block mx-auto" style="height:40px;">
   </a>
 
   <!-- Certified B Corporation -->
   <a href="https://bcorporation.net/" target="_blank">
-    <img src="b.png" alt="Certified B Corporation" class="d-block mx-auto" style="height:80px;">
+    <img src="/images/b.png" alt="Certified B Corporation" class="d-block mx-auto" style="height:80px;">
   </a>
 </div>
 
