--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Generative AI with Large Language Models - Coursera</title>
-  <link rel="icon" type="image/png" href="/images/tablogo.png">
+  <link rel="icon" type="image/png" href="./images/tablogo.png">
+
 
   <!-- Bootstrap 5 -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
