--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
 <nav class="navbar navbar-expand-lg bg-white border-bottom">
   <div class="container-fluid">
     <!-- Logo -->
-    <a class="navbar-brand" href="https://www.coursera.org/account/accomplishments/verify/Y5UY93SYQD5R?isNewUser=true">
-      <img src="images/logo.png" alt="Coursera Logo" height="28">
+    <a class="navbar-brand" href="https://www.coursera.org/">
+      <img src="./images/logo.png" alt="Coursera Logo" height="28">
     </a>
 
     <!-- Hamburger -->
@@ -173,8 +173,8 @@
 
         
         <!-- Auth Buttons -->
-        <a href="https://www.coursera.org/about/cookies-manage?authMode=login" class="btn btn-outline-primary me-lg-2 mb-2 mb-lg-0">Log In</a>
-        <a href="https://www.coursera.org/about/cookies-manage?authMode=login" class="btn btn-primary">Join for Free</a>
+        <a href="https://www.coursera.org/?authMode=login" class="btn btn-outline-primary me-lg-2 mb-2 mb-lg-0">Log In</a>
+        <a href="https://www.coursera.org/?authMode=login" class="btn btn-primary">Join for Free</a>
       </div>
     </div>
   </div>
@@ -194,7 +194,7 @@
       <div class="completion-box d-flex align-items-start">
   <!-- Profile Icon -->
   <div class="position-relative me-3">
-    <img src="images/avatar.png" alt="User Avatar" 
+    <img src="./images/avatar.png" alt="User Avatar" 
          style="height:60px; width:60px; border-radius:50%; background:#f0f0f0; object-fit:cover;">
  
     </span>
@@ -220,7 +220,7 @@
   <div class="d-flex align-items-start">
     <!-- Logo -->
     <div class="me-3">
-      <img src="/images/deep.jpeg" alt="DeepLearning.AI" 
+      <img src="./images/deep.jpeg" alt="DeepLearning.AI" 
            style="height:50px; width:50px; border-radius:50%; object-fit:cover;">
     </div>
 
@@ -284,7 +284,7 @@
     <!-- Right Column -->
     <div class="col-lg-6 text-center">
       <div class="certificate">
-        <img src="/images/certi.png" alt="Certificate" class="img-fluid shadow">
+        <img src="./images/certi.png" alt="Certificate" class="img-fluid shadow">
       </div>
     </div>
   </div>
@@ -354,17 +354,17 @@
 
   <!-- App Store -->
   <a href="https://apps.apple.com/us/app/coursera-grow-your-career/id736535961" target="_blank">
-    <img src="/images/apple.png" alt="App Store" class="mb-2 d-block mx-auto" style="height:40px;">
+    <img src="./images/apple.png" alt="App Store" class="mb-2 d-block mx-auto" style="height:40px;">
   </a>
 
   <!-- Google Play -->
   <a href="https://play.google.com/store/apps/details?id=org.coursera.android" target="_blank">
-    <img src="/images/google.png" alt="Google Play" class="mb-3 d-block mx-auto" style="height:40px;">
+    <img src="./images/google.png" alt="Google Play" class="mb-3 d-block mx-auto" style="height:40px;">
   </a>
 
   <!-- Certified B Corporation -->
   <a href="https://bcorporation.net/" target="_blank">
-    <img src="/images/b.png" alt="Certified B Corporation" class="d-block mx-auto" style="height:80px;">
+    <img src="./images/b.png" alt="Certified B Corporation" class="d-block mx-auto" style="height:80px;">
   </a>
 </div>
 
